# MLOPS-group-67

./: .coverage  .gitignore  LICENSE  README.md  env.yml  hello.py  hugging_face_link.txt  lukas_tests.py  pyproject.toml  requirements.txt  tasks.py
.dvc/: config
.github/workflows/: python-sofusworkflow.yml  tests.yaml
configs/: default_config.yaml
configs/build_features/: build_features_config.yaml
configs/data/: data_config.yaml
configs/model/: model_config.yaml
configs/predict/: predict_config.yaml
configs/test_data/: test_data_config.yaml
configs/train/: train_config.yaml
data/processed/: eval_tokenized.pkl  test_tokenized.pkl  train_tokenized.pkl
data/raw/: data.py  imdb_pickle.dvc
dockerfiles/: train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
lightning_logs/version_3/: metrics.csv
lightning_logs/version_4/: metrics.csv
mlOPSGroup67/: README.md
mlOPSGroup67/dockerfiles/: api.dockerfile
models/: model.py
src/: api.py  model.py  predict.py  train.py
src/data/: __init__.py  dataset.py  make_dataset.py  make_testdata.py
src/mlopsgroup67/: data.py  model.py  train.py
tests/: test_data.py  test_model.py  test_sofus.py
wandb/: latest-run
wandb/offline-run-20250116_182544-7txyxuzx/: run-7txyxuzx.wandb
wandb/run-20250113_181029-28eo68y4/: run-28eo68y4.wandb
wandb/run-20250113_181208-vua4i3mi/: run-vua4i3mi.wandb
wandb/run-20250113_181316-ly9djnkk/: run-ly9djnkk.wandb
wandb/run-20250113_181604-y382z9lj/: run-y382z9lj.wandb
wandb/run-20250113_182732-rwmnjbls/: run-rwmnjbls.wandb
(+35 files in other folders)
